# lurawi

./: .devcontainer.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.new  README.md  app.py  default_knowledge.json  lurawi_example.json  lurawi_example.xml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lurawi-docker-build-push.yml
docs/: APISpecifications.md  LurawiAgent.md  LurawiCLI.md  LurawiConcepts.md  LurawiCreateCustom.md  LurawiDevContainer.md  LurawiDevCycle.md  LurawiGenAiCustoms.md  RAGReferenceImplementation.md  index.md
experiments/: .gitignore  rag_with_summary.ipynb
lurawi/: activity_manager.py  calculate.py  callbackmsg_manager.py  compare.py  custom_behaviour.py  lurawi_agent.py  remote_service.py  timer_manager.py  usermsg_manager.py  utils.py  webhook_handler.py  workflow_engine.py  workflow_service.py
lurawi/custom/: README.md  behaviour_router.py  build_gpt_prompt.py  cache_conversation_history.py  chromadb_search.py  current_datetime.py  discord_message.py  file_loader.py  get_data_from_url.py  get_indexvalue.py  get_keyvalue.py  has_keyvalue.py  invoke_llm.py  populate_prompt.py  query_knowledgebase.py  random_picker.py  send_data_to_service_bus.py  send_data_to_url.py  text_input.py  (+2 more)
simpleui/: Dockerfile  package.json
tools/: behaviour_composer.py  extract_custom_script_examples.py
visualeditor/: 404.html  index.html  invokellm.html  lurawi.js  lurawi_block_library.xml  lurawi_blocks.js  lurawi_utilities.js  lurawi_workspace.js  style.css
(+34 files in other folders)
