[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lurawi_agent"
version = "0.0.1"
authors = [
  { name="Xun Wang", email="wang.xun@gmail.com" },
]
description = "Lurawi Agents"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "requests", "simplejson", "pandas", "langchain", "openai",
  "fastapi", "boto3", "azure-storage-blob", "tiktoken",
  "pyjwt", "aiofiles", "pycryptodome", "autogen-agentchat",
  "multi-agent-orchestrator"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["lurawi", "lurawi.custom"]

[project.urls]
"Homepage" = "https://github.com/kunle12/Lurawi"
"Bug Tracker" = "https://github.com/kunle12/Lurawi"
